# DreamAgent

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Containerfile  README.md  alter_db.py  chaos_trigger.py  check_db.py  cleanup_script.ps1  clear_db.py  create_agent.py  debug_db.py  diagnostics.py  discord_bot.py  dreamagent_test_pack.py  init_db.py  install.bat  install.sh  orchestration_test_pack.py  out.txt  podman-compose.yml  pyproject.toml  requirements.txt  restart_worker.bat  run_validation.py  single_test.py  slack_bot.py  start.bat  stress_test_report.md  stress_tester.py  telegram_bot.py  test3.py  test_advanced.py  test_architecture.py  test_ddg.py  test_integrations.py  test_new_features.py  test_news.py  test_news_stream.py  (+8 more)
alembic/: env.py
archive/Modes/: Lite_mode.py  Ultra_mode.py  standard_mode.py
archive/mcp-servers/: start-all-mcp.ps1  start-figma-mcp.ps1  start-notion-mcp.ps1  start-stripe-mcp.ps1
archive/monitoring/: budget_controller.py  cost_manager.py  dashboard.py  logger.py  metrics.py  tracing.py  (+1 more)
backend/: Containerfile  main.py  react.py  safety.py  worker.py  worker_local.py
config/: model_config.yaml  system_config.yaml  tool_config.yaml
connectors/: base_connector.py  registry.py  token_store.py
docs/: DreamAgent_Analysis.docx  INTEGRATION_GUIDE.md  agent_memory.md  deployment.md  env_setup.md  make_gif.py  microsoft-setup.md  oauth-setup.md  scaling.md
integrations/: __init__.py  ahrefs_client.py  stripe_client.py  supabase_client.py  tavily_client.py
sandbox/: safety_guard.py
scratch/: test_fallback.py
(+362 files in other folders)
