[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamagent"
version = "1.0.0"
description = "Autonomous multi-model AI agent system with ReAct loop, tool routing, memory, and real-time streaming."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DreamAgent Team" }]
keywords = ["ai", "agent", "llm", "autonomous", "openai", "fastapi"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "openai>=1.20",
    "anthropic>=0.25",
    "tavily-python>=0.3",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "numpy>=1.26",
    "requests>=2.31",
    "redis>=5.0",
    "rq>=1.16",
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "pgvector>=0.2",
    "alembic>=1.13",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.120",
    "httpx>=0.27",
    "langgraph>=0.0.40",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-asyncio", "httpx"]

[project.scripts]
dreamagent = "dreamagent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "dreamagent*", "backend*", "core*", "memory*",
    "reasoning*", "tools*", "safety*", "connectors*",
    "models*", "monitoring*", "sandbox*",
]
